update cors, change get all book api
