# routers/book.go
@@ -6,7 +6,7 @@ import (
 )
 
 func BookRouter(r *gin.Engine) {
-	book_group := r.Group("/books")
+	book_group := r.Group("/api/books")
 	{
 		book_group.GET("/:id", api.GetBookById)
 		book_group.POST("/", api.CreateBook)
